2012-11-28  Yael Aharon  <yael.aharon@intel.com>

        [EFL][WK2] input-with-validation-without-shadow.html makes following tests crash after r135935
        https://bugs.webkit.org/show_bug.cgi?id=103508

        Reviewed by Kent Tamura.

        Do not submit the form in the ref test, as it is also not submitted by the
        original test. This also fixes the timeout in EFL's tests.
        Remove the test from TestEexpectations as the test is passing now.

        * fast/dom/shadow/input-with-validation-without-shadow-expected.html:
        * platform/efl-wk2/TestExpectations:

2012-11-28  Hayato Ito  <hayato@chromium.org>

        Node::compareDocumentPosition returns wrong value for a node in the different shadow tree.
        https://bugs.webkit.org/show_bug.cgi?id=103502

        Reviewed by Dimitri Glazkov.

        * fast/dom/shadow/compare-document-position-expected.txt: Added.
        * fast/dom/shadow/compare-document-position.html: Added.

2012-11-28  Noel Gordon  <noel.gordon@gmail.com>

        Unreviewed test fix: chromium/fast/storage/serialized-script-value.html

        This test produces an undefined error if the test fails.

        * platform/chromium/fast/storage/serialized-script-value.html: Use bufferView
        instead of view (view is not defined).

2012-11-28  Joshua Bell  <jsbell@chromium.org>

        [Chromium] IndexedDB: Assert/crash in indexing layout tests in content_shell
        https://bugs.webkit.org/show_bug.cgi?id=103562

        Reviewed by Tony Chang.

        Fix an expectation glitch that may arise in multi-process ports (an error on
        the open request may arrive before logging has stopped; safe to ignore it).

        * storage/indexeddb/resources/transaction-error.js:

2012-11-23  Dirk Schulze  <krit@webkit.org>

        Remove -webkit-mask-attachment
        https://bugs.webkit.org/show_bug.cgi?id=67137

        Reviewed by David Hyatt.
