@@ -1,3 +1,13 @@
+2012-11-28  Hayato Ito <hayato@chromium.org>
+
+        Test the return value from Node::compareDocumentPositionMake more strictly.
+        https://bugs.webkit.org/show_bug.cgi?id=103590
+
+        Reviewed by Dimitri Glazkov.
+
+        * fast/dom/shadow/compare-document-position-expected.txt:
+        * fast/dom/shadow/compare-document-position.html:
+
 2012-11-28  Yael Aharon  <yael.aharon@intel.com>
 
         [EFL][WK2] input-with-validation-without-shadow.html makes following tests crash after r135935
